--- a/documentation/uidocumentation.tex
+++ b/documentation/uidocumentation.tex
@@ -1,12 +1,9 @@
 \documentclass[12pt, letterpaper]{article}
 \usepackage{geometry}
 \geometry{legalpaper, portrait, margin=0.1in}
-\title{SweatSession Testing Documentation}
+\title{SweatSession UI Documentation}
 \author{Synapse Solutions - Capstone Project}
 \begin{document}
 \maketitle
-\section*{Unit Testing}
-\section*{Integration Testing}
-\section*{End-to-end Testing}
     
 \end{document}
